--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,12 @@
 /*.userprefs
 /*.pidb
 /*.booproj
+
+# OS generated
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
